# hoard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  dev.ps1  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docker-build.yml
backend/: main.py  requirements.txt
docs/: backlog.en.md  developer.en.md  developer.fr.md  getting-started.en.md  getting-started.fr.md  installation.en.md  installation.fr.md  native-playback.en.md  native-playback.fr.md  user-guide.en.md  user-guide.fr.md
frontend/: index.html  manifest.webmanifest  service-worker.js
tests/: conftest.py  test_api.py
